Fix Language links which not clickable at narrow viewport widths on desktop
Fixed the issue buy increasing margin-top of 'central-featured' class preventing the 'search-container' overlapping

Bug: T321732

--- a/src/common/assets/postcss/_central-featured.css
+++ b/src/common/assets/postcss/_central-featured.css
@@ -108,7 +108,7 @@
 	.central-featured {
 		width: auto;
 		height: auto;
-		margin-top: 7rem;
+		margin-top: 8rem;
 		font-size: 1.3rem;
 		text-align: left;
 	}
